--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -32,6 +32,15 @@ nav a:hover {
   background-color: gray;
 }
 
+.background {
+  position: fixed; 
+  width: 640px;
+  //white-space: pre;
+  color: #ad7222b3;
+  z-index: -1;
+  left: 50px;
+}
+
 body {
   position: relative;
   margin-top: 50px;
