--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,11 @@
-<nav>
-  {% for item in site.data.navigation %}
-    <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>{{ item.name }}</a>
+<nav class="nav">
+  <a href="" class="hamburger">
+    <div class="burger-text">&#x2630;</div>
+  </a>
+  {% for item in site.data.navigation %}<a href="{{ item.link }}" 
+    {% if page.url == item.link %}class="nav-link current"
+    {% else %}class="nav-link" 
+  {% endif %}>{{ item.name }}
+</a>
   {% endfor %}
 </nav>
