--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,4 +1,4 @@
-.current {
+body .current {
   color: #b3ff00;
 }
 
@@ -7,23 +7,52 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+.burger-text {
+  position: absolute;
+  font-size: 30px;
+  text-align: center;
+  top: 2px;
+  left: 14px;
+}
+
+nav a:hover {
+  background-color: gray;
+}
+
 nav {
   background-color: #c69c62;
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
   height: 50px;
   opacity: 1;
 }
 
-nav a {
+.nav-link {
+  color: black;
   text-decoration: none;
   float: left;
   display: block;
-  width: 10%;
+  width: 180px;
+  height: 25px;
+  border-width: 3px 3px 3px 0px;
+  border-style: solid; 
+  border-color: black;
+  text-align: center;
+  padding: 10px 0;
+  opacity: 1;
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.hamburger {
+  color: black;
+  float: left;
+  display: block;
+  width: 50px;
   height: 25px;
   border: 3px solid black;
-  text-align: center;
   padding: 10px 0;
   opacity: 1;
 }
@@ -34,11 +63,7 @@ p {
 }
 
 h1 {
-  font-size: 25px;
-}
-
-nav a:hover {
-  background-color: gray;
+  font-size: 45px;
 }
 
 .background {
@@ -47,7 +72,9 @@ nav a:hover {
   //white-space: pre;
   color: #ad7222b3;
   z-index: -1;
-  left: 50px;
+  left: 150px;
+  transform: rotate(20deg);
+  margin-top: 150px;
 }
 
 body {
@@ -55,4 +82,22 @@ body {
   margin-top: 50px;
   margin-left: 10px;
   height: 1500px;
+}
+
+@media only screen and (max-width:1200px) {
+  .nav-link {
+    width: 15%
+  }
+}
+
+@media only screen and (max-width:760px) {
+  .nav-link {
+    width: 12%
+  }
+}
+
+@media only screen and (max-width:731px) {
+  .nav-link {
+    display: none;
+  }
 }
