--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,13 +12,15 @@
     </script>
 
     <meta charset="utf-8">
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }} | Blake Jarsky</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/assets/CSS/styles.css">
   </head>
   <body>
     {% include navigation.html %}
     {% include background.html %}
+    <div class="text-content">
     {{ content }}
+    </div>
   </body>
 </html>
