--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -27,14 +27,16 @@ nav {
   width: 100%;
   height: 50px;
   opacity: 1;
+  z-index: 2;
 }
+
 
 .nav-link {
   color: black;
   text-decoration: none;
   float: left;
   display: block;
-  width: 180px;
+  width: 15.5%;
   height: 25px;
   border-width: 3px 3px 3px 0px;
   border-style: solid; 
@@ -67,38 +69,121 @@ h1 {
 }
 
 .background {
-  font-size: 20px;
+  font-size: 16px;
   position: fixed; 
   width: 640px;
   //white-space: pre;
   color: #ad7222e0;
   z-index: -1;
   left: 50px;
-  transform: rotate(20deg);
-  margin-top: 100px;
+  transform: rotate(-20deg);
+  margin-top: 130px;
 }
 
 body {
-  position: relative;
   margin-top: 50px;
-  margin-left: 10px;
   height: 1500px;
+}
+
+.text-content {
+  z-index: 1;
+}
+
+@media only screen and (min-width:1260px) {
+  nav {
+    width:1200px; 
+    left: 50%; 
+    margin-left: -600px;  
+  }  
+
+  .nav-link  {
+    width: 15.631%;
+  } 
+  
+  .background {
+    left: 50%;
+    margin-left: -550px;
+  }
+  
+  .text-content {
+    left: 50%;
+    margin-left: -550px;
+    position: relative;
+    //display: inline-block;
+  }
 }
 
 @media only screen and (max-width:1200px) {
   .nav-link {
-    width: 15%
+    //width: 15%;
+  }
+}
+
+@media only screen and (max-width:1060px) {
+  .nav-link {
+    width: 15%;
+  }
+
+  .background {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width:850px) {
+  .background {
+    font-size: 12px;
   }
 }
 
 @media only screen and (max-width:760px) {
   .nav-link {
-    width: 12%
+    width: 14.631%;
   }
 }
 
-@media only screen and (max-width:731px) {
+@media only screen and (max-width:700px) {
   .nav-link {
     display: none;
+  }
+  
+  .background {
+    transform: rotate(-75deg);
+    margin-top: 180px;
+    left: 0px;
+  }
+}
+
+@media only screen and (max-width:414px) {
+  .background {
+    font-size: 10px;
+    left: -140px;
+    transform: rotate(-80deg);
+    margin-top: 85px;
+  } 
+
+  .nav {
+    top: inherit;
+    bottom: 1px;
+  }
+}
+
+@media only screen and (max-width:375px) {
+   .background {
+    font-size: 10px;
+    left: -140px;
+    transform: rotate(-80deg);
+    margin-top: 85px;
+  }
+
+  .nav {
+    top: inherit;
+    bottom: 1px;
+  }
+}
+
+@media only screen and (max-width:320px) {
+  .background {
+    font-size: 9px;
+    margin-top: 20px;
   }
 }
