new feature branch

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
   <body>
     {% include navigation.html %}
     {% include background.html %}
+    {% include side_nav.html %}
     <div class="text-content">
     {{ content }}
     </div>
