edits edits edits

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,11 +1,12 @@
-<nav class="nav">
-  <a href="" class="hamburger">
-    <div class="burger-text">&#x2630;</div>
-  </a>
-  {% for item in site.data.navigation %}<a href="{{ item.link }}" 
-    {% if page.url == item.link %}class="nav-link current"
-    {% else %}class="nav-link" 
-  {% endif %}>{{ item.name }}
-</a>
-  {% endfor %}
+<nav class="nav" role="navigation">
+    <div class="hamburger">&#x2630;</div>
+    </ul>
+    <ul class="menu-links">
+        {% for item in site.data.navigation %}<li><a href="{{ item.link }}" 
+        {% if page.url == item.link %}class="nav-link current"
+        {% else %}class="nav-link" 
+        {% endif %}>{{ item.name }}
+        </a></li>
+        {% endfor %}
+    </ul>
 </nav>
