--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,13 +9,19 @@
       gtag('js', new Date());
 
       gtag('config', 'UA-32602305-2');
+
+
     </script>
 
+    <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="/assets/js/index.js"></script>
+    
     <meta charset="utf-8">
     <title>{{ page.title }} | Blake Jarsky</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/assets/CSS/styles.css">
   </head>
+  
   <body>
     {% include navigation.html %}
     {% include background.html %}
