updating to newsky refs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="/assets/js/index.js"></script>
     
     <meta charset="utf-8">
-    <title>{{ page.title }} | Blake Jarsky</title>
+    <title>{{ page.title }} | Blake Newsky</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/assets/CSS/styles.css">
   </head>
@@ -25,6 +25,8 @@
   <body>
     {% include navigation.html %}
     {% include background.html %}
+    {% include fname_background.html %}
+    {% include lname_background.html %}
     {% include side_nav.html %}
     <div class="text-content">
     {{ content }}
